# debrief

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/debrief/: __init__.py  analyze.py  cli.py  metadata.py  pdf.py  pipeline.py  refine.py  screenshots.py  transcribe.py
src/debrief/templates/: report.html
tests/: conftest.py  test_pdf_visual.py  test_pipeline_integration.py  visual.py
